src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Harvest_ID__c</fullName>
        <externalId>true</externalId>
        <label>Harvest ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Sync_to_Harvest__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sync to Harvest</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isActiveHarvestClient__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active Harvest Client</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>